tests/data/empty-host-ingress-reload/empty-host-ingress-reload-failure-buffer-size.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: empty-host-ingress-reload-failure-buffer-size
  annotations:
    nginx.org/proxy-buffer-size: "16k"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: empty-host-svc
            port:
              number: 80
